--- a/block_Nuevo.html
+++ b/block_Nuevo.html
@@ -14,6 +14,7 @@
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <p> Es posible que no este funcionado el "Merge" para fucionar los cambios del nodo Cabecera</p>
 
             </div>
             <p>Es una nueva mejora a mi blog</p>
