--- a/block_Nuevo.html
+++ b/block_Nuevo.html
@@ -1,6 +1,6 @@
 <html>
     <header>
-        <title>El titulo del post</title>
+        <title>Bienveb¿nidos a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </header>
     <body>
