--- a/block_Nuevo.html
+++ b/block_Nuevo.html
@@ -12,13 +12,16 @@
                 </span>
             </div>
             <div id="post">
-                <h1>Este es mi nuevo titulo</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
                 <p> Es posible que no este funcionado el "Merge" para fucionar los cambios del nodo Cabecera</p>
-
+                <p>Suscribete y dale like</p>
             </div>
             <p>Es una nueva mejora a mi blog</p>
+        <div id="footer">
+            hecho con amor en Platzi &lt;3
         </div>
-        
+
+        </div>    
     </body>
 </html>
