<se ajusta el valor de la imagen>

--- a/block_Nuevo.html
+++ b/block_Nuevo.html
@@ -15,7 +15,7 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
-                <p><img src="imagnes/rick-morty.png"></p>
+                <p><img src="imagnes/rick-morty.png"  width="100%"></p>
                 <p> Es posible que no este funcionado el "Merge" para fucionar los cambios del nodo Cabecera</p>
                 <p>Suscribete y dale like</p>
             </div>
