<Un cambio sin importancia>

--- a/block_Nuevo.html
+++ b/block_Nuevo.html
@@ -19,7 +19,7 @@
                 <p> Es posible que no este funcionado el "Merge" para fucionar los cambios del nodo Cabecera</p>
                 <p>Suscribete y dale like</p>
             </div>
-            <p>Es una nueva mejora a mi blog</p>
+            <p>Es una nueva mejora a mi blog más</p>
         <div id="footer">
             hecho con amor en Platzi &lt;3
         </div>
