Se modifican unos archivos

--- a/block_Nuevo.html
+++ b/block_Nuevo.html
@@ -6,7 +6,7 @@
     <body>
         <div id ="container">
             <div id="Cabecera">
-            <img src="imagnes/dragon.webp" />
+            <img src="imagnes/dragon.png" />
                 hyprblog
                 <span id="tagline">
                     Tu blog de Cabecera
